--- a/src/sass/abstracts/_utilities.scss
+++ b/src/sass/abstracts/_utilities.scss
@@ -30,7 +30,8 @@
 }
 
 .fs-32 {
-    font-size: 2rem;
+    font-size: 1.375rem;
+    font-size: clamp(1.375rem, 1.16rem + 0.93vw, 2rem);
 }
 
 .fs-36 {
